--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				   <configuration>
+                <release>10</release>
+            </configuration>
 			</plugin>
 		</plugins>
 	</build>
